<resources>
    <string name="app_name">PodShare</string>


    <string name="log_out">Log out</string>
    <string name="login_continue">Login</string>

    <!--  LOGIN -->
    <string name="login_moto">Speak your mind!</string>
    <string name="forgot_password"><b>Forgot password?</b></string>
    <string name="login_submit">Login</string>
    <string name="no_account"> <u>Don\'t have an account? Register now!</u></string>

    <!-- REGISTER -->
    <string name="register_moto">Create an account!</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="accept_terms">I accept Terms and Conditions for using this app.</string>
    <string name="register_submit">Submit</string>
    <string name="has_account"> <u>Already a PodSharer? Login!</u></string>

    <!-- FORGOT PASSWORD -->
    <string name="forgot_password_info">Enter your e-mail and we will send you a new password!</string>
    <string name="back_to_login">Go Back to Login</string>
    <string name="forgot_password_send">Send</string>

    <!-- BOTTOM NAVIGATION BAR -->
    <string name="nb_home">HOME</string>
    <string name="nb_search">SEARCH</string>
    <string name="nb_upload">UPLOAD</string>
    <string name="nb_favourites">FAVOURITES</string>
    <string name="nb_profile">PROFILE</string>

    <!-- SIDE MENU -->
    <string name="sm">SIDE MENU</string>
    <string name="sm_following">FOLLOWING</string>
    <string name="sm_subscribed">SUBSCRIBED</string>
    <string name="sm_favourites">FAVOURITES</string>
    <string name="sm_settings">ACCOUNT SETTINGS</string>
    <string name="sm_faq">FAQ</string>
    <string name="sm_logout">LOGOUT</string>

    <!-- HOMEPAGE-->
    <string name="trending">Trending</string>
    <string name="your_subscriptions">Your Subscriptions</string>
    <string name="hp_podsharers">PodSharers</string>
    <string name="hp_podcasts">Podcasts</string>
    <string name="sub_podsharers">Podcast Episodes from PodSharers you follow will appear here</string>
    <string name="sub_podcasts">Episodes from Podcasts you have subscribed to will appear here</string>

    <!-- SEARCH-->
    <string name="search_title">Search</string>
    <string name="search_question">What are you looking for?</string>
    <string name="search_option_1">Podcasts</string>
    <string name="search_option_2">Podsharers</string>
    <string name="search_recent">Recent Searches</string>
    <string name="search_podsharers">This feature is not available yet</string>
    <string name="search_recent_default">You haven’t made any searches yet. Use the search button above!</string>

    <!-- UPLOAD EPISODE -->
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="episode_name">Episode name:</string>
    <string name="episode_name_example">Business Planning</string>
    <string name="episode_description">Description:</string>
    <string name="episode_description_example">A business plan is a valuable tool for business planning..</string>
    <string name="episode_add_episode_to">Add episode to podcast:</string>
    <string name="new_podcast">&#160;&#160;New Podcast</string>
    <string name="existing_podcast">&#160;&#160;Existing Podcast</string>
    <string name="step_1">"Step 1 "</string>
    <string name="step_2">Step 2</string>
    <string name="podcast_name">Podcast name:</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_podcast">Select Podcast</string>
    <string name="step_3">Step 3</string>
    <string name="upload_audio">Upload Audio File</string>
    <string name="privacy">Privacy:</string>
    <string name="privacy_private">&#160;&#160; Private</string>
    <string name="privacy_public">&#160;&#160; Public</string>
    <string name="submit_episode">Submit Episode</string>

    <!-- FAVORITES & PROFILE-->
    <string name="not_available">This feature is not available yet. More coming soon!</string>

    <!-- MEDIA PLAYER -->
    <string name="episode_name_default">Episode Name</string>
    <string name="podsharer_name_default">PodSharer</string>
    <string name="podcast_name_default">Podcast Name</string>
    <string name="no_of_likes">37 501</string>
    <string name="no_of_favorites">200K Views</string>

    <!-- PODSHARER AND PODCAST PROFILE-->
    <string name="podcasts_text">Podcasts:</string>
    <string name="episodes_text">Episodes:</string>
    <string name="podcasts">Podcasts</string>
    <string name="episodes">Episodes</string>
    <string name="follow">Follow</string>
    <string name="subscribe">Subscribe</string>
    <string name="podsharers">Podsharers:</string>
    <string name="no_podcasts">This PodSharer hasn\'t created any podcasts yet!</string>
    <string name="back_to_profile">Go back to Podcast Page</string>
    <string name="no_of_episodes">1</string>
    <string name="no_of_podcasts">1</string>
    <string name="no_of_subscribers">8.2k subscribers</string>
    <string name="no_of_followers">511 followers</string>

    <!-- PROGRESS DIALOGES-->
    <string name="please_wait">Please wait…</string>
    <string name="fetching_podcats">Fetching podcasts now. Please wait…</string>
    <string name="fetching_episodes">Fetching podcast\'s episodes now. Please wait…</string>
    <string name="preparing_results">Preparing search function. Please wait…</string>
    <string name="other_episodes">"Other episodes in: "</string>

</resources>