<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/sm_following"
        android:title="@string/sm_following"
        android:enabled="true"
        android:icon="@drawable/menufollowing" />
    <item android:id="@+id/sm_subscribed"
        android:title="@string/sm_subscribed"
        android:enabled="true"
        android:icon="@drawable/menusubscribed" />
    <item android:id="@+id/sm_favourites"
        android:title="@string/sm_favourites"
        android:enabled="true"
        android:icon="@drawable/menufavourites" />
    <item android:id="@+id/sm_settings"
        android:title="@string/sm_settings"
        android:enabled="true"
        android:icon="@drawable/menusettings" />
    <item android:id="@+id/sm_faq"
        android:title="@string/sm_faq"
        android:enabled="true"
        android:icon="@drawable/menufaq" />
    <item android:id="@+id/menu_item_logout"
        android:title="@string/sm_logout"
        android:icon="@android:drawable/ic_menu_upload" />

</menu>