<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:icon="@drawable/side_menu"
        android:title=""
        app:showAsAction="always">

        <menu
            android:panelFullBackground="@color/colorPrimary" >
            <item
                android:id="@+id/sm_following"
                android:enabled="true"
                android:icon="@drawable/menufollowing"
                android:title="@string/sm_following" />
            <item
                android:id="@+id/sm_subscribed"
                android:enabled="true"
                android:icon="@drawable/menusubscribed"
                android:title="@string/sm_subscribed" />
            <item
                android:id="@+id/sm_favourites"
                android:enabled="true"
                android:icon="@drawable/menufavourites"
                android:title="@string/sm_favourites" />
            <item
                android:id="@+id/sm_settings"
                android:enabled="true"
                android:icon="@drawable/menusettings"
                android:title="@string/sm_settings" />
            <item
                android:id="@+id/sm_faq"
                android:enabled="true"
                android:icon="@drawable/menufaq"
                android:title="@string/sm_faq" />
            <item
                android:id="@+id/menu_item_logout"
                android:icon="@drawable/logout"
                android:title="@string/sm_logout" />
        </menu>

    </item>
</menu>