<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/play_episode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_upload"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/spacingHuge"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/spacingSmall">

    <TextView
        android:id="@+id/step_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacingHuge"
        android:layout_marginLeft="@dimen/spacingHuge"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:padding="@dimen/spacingTiny"
        android:text="@string/step_1"
        android:textColor="@color/upload_purple"
        android:textSize="@dimen/textTitle" />

    <com.kofigyan.stateprogressbar.StateProgressBar
        android:id="@+id/step_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:spb_currentStateNumber="one"
        app:spb_maxStateNumber="three"
        app:spb_stateBackgroundColor="@color/step_color"
        app:spb_stateForegroundColor="@color/step_color"
        app:spb_stateNumberBackgroundColor="@color/step_color"
        app:spb_stateNumberForegroundColor="@color/black"
        app:spb_animateToCurrentProgressState="true"
        app:spb_checkStateCompleted="true"/>

    <TextView
        android:id="@+id/episode_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacingHuge"
        android:layout_marginLeft="@dimen/spacingHuge"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:padding="@dimen/spacingTiny"
        android:text="@string/episode_name"
        android:textColor="@color/white"
        android:textSize="@dimen/textTitle" />


    <com.aueb.podshare.view.InputLayoutWithEditTextView
        android:id="@+id/episode_name"
        android:layout_width="276dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:itemEditTextHint="@string/episode_name_example" />

    <TextView
        android:id="@+id/episode_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacingHuge"
        android:layout_marginLeft="@dimen/spacingHuge"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:padding="@dimen/spacingTiny"
        android:text="@string/episode_description"
        android:textColor="@color/white"
        android:textSize="@dimen/textTitle" />

    <com.aueb.podshare.view.InputLayoutWithEditTextView
        android:id="@+id/episode_description"
        android:layout_width="276dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:itemEditTextHint="@string/episode_description_example" />

    <TextView
        android:id="@+id/episode_belongs_to_new_or_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacingHuge"
        android:layout_marginLeft="@dimen/spacingHuge"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:padding="@dimen/spacingTiny"
        android:text="@string/episode_add_episode_to"
        android:textColor="@color/white"
        android:textSize="@dimen/textTitle" />

    <RadioGroup
        android:id="@+id/accuracy_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacingExtraHuge"
        android:layout_marginLeft="@dimen/spacingHuge"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/new_podcast_choice_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radiobuttonstyle"
            android:onClick="onRadioButtonClicked"
            android:layout_marginTop="@dimen/spacingSmall"
            android:layout_marginBottom="@dimen/spacingSmall"
            android:text="@string/new_podcast"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/existing_podcast_choice_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:layout_marginBottom="@dimen/spacingSmall"
            android:button="@drawable/radiobuttonstyle"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/existing_podcast"
            android:textColor="@color/white" />
    </RadioGroup>

    <!-- Next -->
    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="45dp"
        android:background="@drawable/upload_episode_button_next"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="8sp"
        android:text="@string/next"
        android:textAppearance="@style/next" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="45dp"
        android:background="@drawable/upload_episode_button_back"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="8sp"
        android:text="@string/cancel"
        android:textAppearance="@style/next" />
    </LinearLayout>

</LinearLayout>
