<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
    android:id="@+id/search_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/search_title"
    android:gravity="top"
    android:padding="@dimen/spacingMedium"
    android:textColor="@color/white"
    android:textSize="@dimen/textSuperHuge"/>

    <TextView
        android:id="@+id/search_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_question"
        android:gravity="top"
        android:layout_marginBottom="@dimen/spacingSmall"
        android:padding="@dimen/spacingMedium"
        android:textColor="@color/white"
        android:textSize="@dimen/textExtraHuge"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/search_option_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/search_podcasts"
                android:textColor="@color/unselected" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacingMedium"
                android:text="@string/search_option_1"
                android:textColor="@color/white"
                android:textSize="@dimen/textSmall" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/search_option_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:src="@drawable/search_podsharers"
                android:focusable="true"
                android:textColor="@color/unselected" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacingMedium"
                android:text="@string/search_option_2"
                android:textColor="@color/white"
                android:textSize="@dimen/textSmall" />
        </LinearLayout>
    </LinearLayout>

    <TextView
    android:id="@+id/search_recent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/search_recent"
    android:gravity="top"
    android:layout_marginBottom="@dimen/spacingSmall"
    android:padding="@dimen/spacingMedium"
    android:textColor="@color/white"
    android:textSize="@dimen/textExtraHuge"/>
    <TextView
        android:id="@+id/search_recent_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_recent_default"
        android:gravity="center"
        android:layout_marginBottom="@dimen/spacingSmall"
        android:padding="@dimen/spacingMedium"
        android:textColor="@color/gray"
        android:textSize="@dimen/textExtraHuge"/>

</LinearLayout>